--- a/success.html
+++ b/success.html
@@ -54,7 +54,7 @@
           <div class="showcase-content">
             <h1>
               <span class="text-secondary smaller"
-              >Rezerváciu prosím potvrdite v emaily</span
+              >Rezerváciu prosím potvrďte v emaily</span
               >
             </h1>
           </div>
@@ -64,10 +64,10 @@
     <div class="heading-success">
       <!-- <h1>
         <span class="text-secondary smaller"
-          >Rezerváciu prosím potvrdite v emaily</span
+          >Rezerváciu prosím potvrďte v emaily</span
         >
       </h1> -->
-      <h1 class="text-secondary">Rezerváciu prosím potvrdite v emaily</h1>
+      <h1 class="text-secondary">Rezerváciu prosím potvrďte v emaily</h1>
     </div>
 
     <footer id="footer">
