--- a/cancel.html
+++ b/cancel.html
@@ -30,9 +30,9 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna.html">Sauna</a></li>
-              <li><a href="reservation.html">Rezervácia</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="sauna">Sauna</a></li>
+              <li><a href="reservation">Rezervácia</a></li>
+              <li><a href="contact">Kontakt</a></li>
             </ul>
           </div>
         </div>
@@ -42,13 +42,13 @@
     <header id="header-home-success">
       <div class="container">
         <nav id="main-nav">
-          <a href="index.html" id="logo"
+          <a href="/" id="logo"
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
           <ul>
-            <li><a href="sauna.html">Sauna</a></li>
-            <li><a href="reservation.html">Rezervácia</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="sauna">Sauna</a></li>
+            <li><a href="reservation">Rezervácia</a></li>
+            <li><a href="contact">Kontakt</a></li>
           </ul>
         </nav>
         <!-- <div id="showcase">
