--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div>
               <div>
                   <ul>
-                      <li><a href="sauna.html">Sauna</a></li>
-                      <li><a href="reservation.html">Rezervácia</a></li>
-                      <li><a href="contact.html">Kontakt</a></li>
+                      <li><a href="sauna">Sauna</a></li>
+                      <li><a href="reservation">Rezervácia</a></li>
+                      <li><a href="contact">Kontakt</a></li>
                       
                   </ul>
               </div>
@@ -42,14 +42,14 @@
     <header id="header-home">
       <div class="container">
         <nav id="main-nav">
-          <!-- <a href="index.html" id="logo"
+          <!-- <a href="/" id="logo"
             >POĽNÁ<span class="text-color">SAUNA</span></a
           > -->
-          <a href="index.html" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
+          <a href="/" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
           <ul>
-            <li><a href="sauna.html">Sauna</a></li>
-            <li><a href="reservation.html">Rezervácia</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="sauna">Sauna</a></li>
+            <li><a href="reservation">Rezervácia</a></li>
+            <li><a href="contact">Kontakt</a></li>
           </ul>
         </nav>
         <div id="showcase">
@@ -58,7 +58,7 @@
             <p class="lead">
               Spoj relaxačnú silu sauny a prírody a rezervuj si svoj termín
             </p>
-            <a class="btn" href="reservation.html">Rezervácia</a>
+            <a class="btn" href="reservation">Rezervácia</a>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           sa tiež kochajú krásou prírody.  -->
           Pri návšteve Poľnej Sauny je potrebné dodržiavať aj niekoľko pravidiel
           pre našu a hlavne pre Vašu spokojnosť.</p>
-          <a class="btn" href="sauna.html">Pravidlá Sauny</a>
+          <a class="btn" href="sauna">Pravidlá Sauny</a>
       </section>
       <section>
         <div id="gallery">
