--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna.html">Sauna</a></li>
-              <li><a href="reservation.html">Rezervácia</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="sauna">Sauna</a></li>
+              <li><a href="reservation">Rezervácia</a></li>
+              <li><a href="contact">Kontakt</a></li>
             </ul>
           </div>
         </div>
@@ -47,13 +47,13 @@
     <header id="header-home-contact">
       <div class="container">
         <nav id="main-nav">
-          <a href="index.html" id="logo"
+          <a href="/" id="logo"
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
           <ul>
-            <li><a href="sauna.html">Sauna</a></li>
-            <li><a href="reservation.html">Rezervácia</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="sauna">Sauna</a></li>
+            <li><a href="reservation">Rezervácia</a></li>
+            <li><a href="contact">Kontakt</a></li>
           </ul>
         </nav>
         <div id="showcase">
@@ -74,7 +74,7 @@
           <input
             type="hidden"
             name="_next"
-            value="http://127.0.0.1:5500/thanks.html"
+            value="http://127.0.0.1:5500/thanks"
           />
           <div class="wrapper">
             <div class="box">
