--- a/sauna.html
+++ b/sauna.html
@@ -28,9 +28,9 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna.html">Sauna</a></li>
-              <li><a href="reservation.html">Rezervácia</a></li>
-              <li><a href="contact.html">Kontakt</a></li>
+              <li><a href="sauna">Sauna</a></li>
+              <li><a href="reservation">Rezervácia</a></li>
+              <li><a href="contact">Kontakt</a></li>
             </ul>
           </div>
         </div>
@@ -40,14 +40,14 @@
     <header id="header-home-sauna">
       <div class="container">
         <nav id="main-nav">
-          <a href="index.html" id="logo"
+          <a href="/" id="logo"
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
 
           <ul>
-            <li><a href="sauna.html">Sauna</a></li>
-            <li><a href="reservation.html">Rezervácia</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="sauna">Sauna</a></li>
+            <li><a href="reservation">Rezervácia</a></li>
+            <li><a href="contact">Kontakt</a></li>
           </ul>
         </nav>
         <!-- <div id="showcase-sauna">
@@ -61,7 +61,7 @@
       <h1 class="text-secondary">Pravidlá sauny</h1>
       <p>
         <b>◈</b> Pred návštevou Poľnej Sauny je potrebné si zarezervovať termín
-        v <a href="reservation.html" class="inline-link">kalendári</a> <br />
+        v <a href="reservation" class="inline-link">kalendári</a> <br />
         <br /><b>◈</b> K saunovaniu je potrebné si doniesť vlastný uterák a
         plachtu<br /><br />
         <b>◈</b> Oheň do sauny si môžeš rozpáliť z pripraveného dreva na
