--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       <section>
         <div id="gallery">
           <div class="image-container">
-            <div class="image">
+            <!-- <div class="image">
               <img
                 class="img"
                 src="img/IMG-20220420-WA0001.jpg"
                 alt="sauna picture"
               />
-            </div>
+            </div> -->
             <!-- <div class="image">
               <img
                 class="img"
@@ -100,13 +100,13 @@
                 alt="sauna picture"
               />
             </div>
-            <div class="image">
+            <!-- <div class="image">
               <img
                 class="img"
                 src="img/IMG-20220420-WA0004.jpg"
                 alt="sauna picture"
               />
-            </div>
+            </div> -->
             <div class="image">
               <img
                 class="img"
@@ -121,13 +121,13 @@
                 alt="sauna picture"
               />
             </div>
-            <div class="image">
+            <!-- <div class="image">
               <img
                 class="img"
                 src="img/IMG-20220420-WA0007.jpg"
                 alt="sauna picture"
               />
-            </div>
+            </div> -->
             <div class="image">
               <img
                 class="img"
