--- a/reservation.html
+++ b/reservation.html
@@ -82,14 +82,14 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required /><br />
         <label for="phone">Tel. číslo:</label>
-        <input type="checkbox" />
+        <!-- <input type="checkbox" />
         <p>
           Súhlasím s
           <a href="PODMIENKY UŽÍVANIA POĽNEJ SAUNY.pdf" class="inline-link"
             >podmienkami</a
           >
           využívania poľnej sauny
-        </p>
+        </p> -->
         <input type="tel" id="phone" name="phone" required /><br />
         <input type="hidden" id="year" name="year" />
         <input type="hidden" id="month" name="month" />
