--- a/index.html
+++ b/index.html
@@ -193,5 +193,6 @@
       <p class="copy">Copyright © 2022 - Poľná Sauna Nová Ľubovňa</p>
     </footer>
     <script src="script.js"></script>
+    <script src="gallery.js"></script>
   </body>
 </html>
