--- a/reservation.html
+++ b/reservation.html
@@ -70,7 +70,7 @@
 
       <form id="reservation">
         <label for="termin">Termín:</label>
-        <span id="term"></span>
+        <span id="term"></span><br />
         <label for="name">Meno:</label>
         <input
           type="text"
@@ -82,15 +82,15 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required /><br />
         <label for="phone">Tel. číslo:</label>
-        <!-- <input type="checkbox" />
-        <p>
-          Súhlasím s
-          <a href="PODMIENKY UŽÍVANIA POĽNEJ SAUNY.pdf" class="inline-link"
+        <input type="tel" id="phone" name="phone" required /><br /><br />
+        <input type="checkbox" id="suhlas" required />
+        <label for="suhlas"
+          >Súhlasím s
+          <a href="podmienky.pdf" target="_blank" class="inline-link"
             >podmienkami</a
           >
-          využívania poľnej sauny
-        </p> -->
-        <input type="tel" id="phone" name="phone" required /><br />
+          využívania poľnej sauny</label
+        ><br />
         <input type="hidden" id="year" name="year" />
         <input type="hidden" id="month" name="month" />
         <input type="hidden" id="day" name="day" />
