--- a/reservation.html
+++ b/reservation.html
@@ -69,8 +69,9 @@
       <div id="calendar"></div>
 
       <form id="reservation">
-        <label for="termin">Termín:</label>
-        <span id="term"></span><br />
+        <div style="margin-bottom: 10px">
+          <label for="term">Termín:</label> <span id="term"></span><br />
+        </div>
         <label for="name">Meno:</label>
         <input
           type="text"
