adding an image

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                 alt="sauna picture"
               />
             </div>
-            <!-- <div class="image">
+            <div class="image">
               <img
-                class="img img10"
+                class="img"
                 src="img/IMG-20220801-WA0000.jpg"
                 alt="sauna picture"
               />
-            </div> -->
+            </div>
           </div>
 
           <div class="pop-img">
