--- a/reservation.html
+++ b/reservation.html
@@ -96,7 +96,7 @@
         <input type="hidden" id="month" name="month" />
         <input type="hidden" id="day" name="day" />
         <input type="hidden" id="hour" name="hour" />
-        <input type="submit" value="Odoslať" class="re-button" />
+        <input type="submit" value="Rezervovať" class="re-button" />
       </form>
     </div>
 
