--- a/sauna.html
+++ b/sauna.html
@@ -62,18 +62,12 @@
       <p>
         <b>◈</b> Pred návštevou Poľnej Sauny je potrebné si zarezervovať termín
         v <a href="reservation" class="inline-link">kalendári</a> <br />
-        <br /><b>◈</b> K saunovaniu je potrebné si doniesť vlastný uterák a
-        plachtu<br /><br />
-        <b>◈</b> Oheň do sauny si môžeš rozpáliť z pripraveného dreva na
-        požadovanú teplotu <br /><br />
-        <b>◈</b> Nezabudni však na ochladzovanie, ktoré ti ponúka súd alebo
-        vedro s vodou<br /><br />
-        <b>◈</b>Je potrebné dodržiavať pitný režim, ktorí je k dispozícií zo
-        studne, prípadne z vlastných zdrojov<br /><br />
-        <b>◈</b> Zrelaxovať sa môžete na pripravených miestach <br /><br /><b
-          >◈</b
-        >Prosíme, aby ste v celom areály sauny nefajčili a nepožívali
-        alkoholické nápoje<br /><br />
+        <br /><b>◈</b> K saunovaniu je potrebné si doniesť vlastný uterák, plachtu a čistú obuv do priestoru chatky<br /><br />
+        <b>◈</b> Oheň do sauny si môžeš rozpáliť z pripraveného dreva na požadovanú teplotu <br /><br />
+        <b>◈</b> Nezabudni však na ochladzovanie, ktoré ti ponúka súd alebo vedro s vodou<br /><br />
+        <b>◈</b>Je potrebné dodržiavať pitný režim, ktorí je k dispozícií zo studne, prípadne z vlastných zdrojov<br /><br />
+        <b>◈</b> Zrelaxovať sa môžete na pripravených miestach <br /><br /><b>◈</b
+        >Prosíme, aby ste v celom areály sauny nefajčili a nepožívali alkoholické nápoje<br /><br />
         <b>◈</b> Svoju spokojnosť/nespokojnosť môžete vyjadriť milým slovom v
         knihe návštev, alebo dobrovoľným finančným darom, za čo vám vopred
         ĎAKUJEME!
