--- a/sauna.html
+++ b/sauna.html
@@ -72,7 +72,7 @@
         studne, prípadne z vlastných zdrojov<br /><br />
         <b>◈</b> Zrelaxovať sa môžete na pripravených miestach <br /><br /><b
           >◈</b
-        >Prosíme, aby ste v celom areály sauny nefajčili a nepožívali
+        >Prosíme, aby ste v celom areáli sauny nefajčili a nepožívali
         alkoholické nápoje<br /><br />
         <b>◈</b> Svoju spokojnosť/nespokojnosť môžete vyjadriť milým slovom v
         knihe návštev, alebo dobrovoľným finančným darom, za čo vám vopred
