--- a/sauna.html
+++ b/sauna.html
@@ -68,7 +68,7 @@
         požadovanú teplotu <br /><br />
         <b>◈</b> Nezabudni však na ochladzovanie, ktoré ti ponúka súd alebo
         vedro s vodou<br /><br />
-        <b>◈</b>Je potrebné dodržiavať pitný režim, ktorí je k dispozícií zo
+        <b>◈</b>Je potrebné dodržiavať pitný režim, ktorý je k dispozícií zo
         studne, prípadne z vlastných zdrojov<br /><br />
         <b>◈</b> Zrelaxovať sa môžete na pripravených miestach <br /><br /><b
           >◈</b
