--- a/sauna.html
+++ b/sauna.html
@@ -61,7 +61,7 @@
       <h1 class="text-secondary">Pravidlá sauny</h1>
       <p>
         <b>◈</b> Pred návštevou Poľnej Sauny je potrebné si zarezervovať termín
-        v <a href="reservation" class="inline-link">kalendári</a> <br />
+        v <a href="reservation" class="inline-link">kalendári</a> po dobu 3 hodín.<br />
         <br /><b>◈</b> K saunovaniu je potrebné si doniesť vlastný uterák,
         plachtu a čistú obuv do priestoru chatky<br /><br />
         <b>◈</b> Oheň do sauny si môžeš rozpáliť z pripraveného dreva na
