--- a/sauna.html
+++ b/sauna.html
@@ -61,11 +61,12 @@
       <h1 class="text-secondary">Pravidlá sauny</h1>
       <p>
         <b>◈</b> Pred návštevou Poľnej Sauny je potrebné si zarezervovať termín
-        v <a href="reservation" class="inline-link">kalendári</a> po dobu 3 hodín.<br />
+        v <a href="reservation" class="inline-link">kalendári</a> po dobu 3
+        hodín.<br />
         <br /><b>◈</b> K saunovaniu je potrebné si doniesť vlastný uterák,
         plachtu a čistú obuv do priestoru chatky<br /><br />
-        <b>◈</b> Oheň do sauny si môžeš rozpáliť z pripraveného dreva na
-        požadovanú teplotu <br /><br />
+        <b>◈</b>Požadovanú teplotu v saune dosiahnete spaľovaním dreva v
+        saunovej peci<br /><br />
         <b>◈</b> Nezabudni však na ochladzovanie, ktoré ti ponúka súd alebo
         vedro s vodou<br /><br />
         <b>◈</b>Je potrebné dodržiavať pitný režim, ktorý je k dispozícií zo
@@ -75,9 +76,11 @@
         >Prosíme, aby ste v celom areáli sauny nefajčili a nepožívali
         alkoholické nápoje<br /><br />
         <b>◈</b> Svoju spokojnosť/nespokojnosť môžete vyjadriť milým slovom v
-        knihe návštev, alebo dobrovoľným finančným darom, za čo vám vopred
-        ĎAKUJEME!
+        knihe návštev
         <br />
+        <b>◈</b> Podporiť nás môžete dobrovoľným finančným darom, za čo vám
+        vopred ĎAKUJEME!<br />
+
         <!-- <br /><b>◈</b> V prípade Vašej spokojnosti nás môžete podporiť
         dobrovoľným finančným darom, za čo vám vopred ĎAKUJEME!<br /><br /> -->
 
