--- a/sauna.html
+++ b/sauna.html
@@ -76,8 +76,7 @@
         >Prosíme, aby ste v celom areáli sauny nefajčili a nepožívali
         alkoholické nápoje<br /><br />
         <b>◈</b> Svoju spokojnosť/nespokojnosť môžete vyjadriť milým slovom v
-        knihe návštev
-        <br />
+        knihe návštev <br /><br />
         <b>◈</b> Podporiť nás môžete dobrovoľným finančným darom, za čo vám
         vopred ĎAKUJEME!<br />
 
