--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
       <div class="container-contact">
         <h2>Kontaktujte nás</h2>
         <form
-          action="https://formsubmit.co/jakub.repka1@gmail.com"
+          action="https://formsubmit.co/info@polnasauna.sk"
           method="POST"
           id="form-section"
         >
