--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                       <li><a href="sauna">Sauna</a></li>
                       <li><a href="reservation">Rezervácia</a></li>
                       <li><a href="contact">Kontakt</a></li>
+                      <li>
+                        <a
+                          href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
+                          ><i class="fa-brands fa-instagram"></i
+                        ></a>
+                      </li>
 
                   </ul>
               </div>
@@ -47,6 +53,13 @@
           > -->
           <a href="/" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
           <ul>
+            <li>
+              <a
+                href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
             <li><a href="sauna">Sauna</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
