--- a/cancel.html
+++ b/cancel.html
@@ -33,6 +33,13 @@
               <li><a href="sauna">Sauna</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
+              <li>
+                <a
+                  href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
+                  target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
             </ul>
           </div>
         </div>
@@ -49,6 +56,13 @@
             <li><a href="sauna">Sauna</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
+            <li>
+              <a
+                href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
           </ul>
         </nav>
         <!-- <div id="showcase">
