--- a/success.html
+++ b/success.html
@@ -56,9 +56,7 @@
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
-              <a
-                href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
-                target="_blank"
+              <a href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </li>
