--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,7 @@
           method="POST"
           id="form-section"
         >
-          <input
-            type="hidden"
-            name="_next"
-            value="http://127.0.0.1:5500/thanks"
-          />
+          <input type="hidden" name="_next" value="thanks" />
           <div class="wrapper">
             <div class="box">
               <input type="text" name="fname" id="fname" required />
