--- a/confirm.html
+++ b/confirm.html
@@ -71,7 +71,7 @@
       </div>
     </header>
     <div class="heading-success">
-      <div id="message" class="text-secondary"></div>
+      <h1 id="message" class="text-secondary"></h1>
     </div>
 
     <footer id="footer">
