--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,11 @@
           method="POST"
           id="form-section"
         >
-          <input type="hidden" name="_next" value="thanks" />
+          <input
+            type="hidden"
+            name="_next"
+            value="https://polnasauna.sk/thanks"
+          />
           <div class="wrapper">
             <div class="box">
               <input type="text" name="fname" id="fname" required />
