--- a/reservation.html
+++ b/reservation.html
@@ -84,7 +84,7 @@
         <div style="margin-bottom: 10px">
           <label for="term">Termín:</label> <span id="term"></span><br />
         </div>
-        <label for="name">Meno:</label>
+        <label for="name">Meno a Priezvisko:</label>
         <input
           type="text"
           id="name"
