--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div>
               <div>
                   <ul>
-                      <li><a href="sauna">Sauna</a></li>
+                      <li><a href="terms">Pravidlá</a></li>
                       <li><a href="reservation">Rezervácia</a></li>
                       <li><a href="contact">Kontakt</a></li>
                       <li>
@@ -53,7 +53,7 @@
           > -->
           <a href="/" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
           <ul>
-            <li><a href="sauna">Sauna</a></li>
+            <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
@@ -87,7 +87,7 @@
           sa tiež kochajú krásou prírody.  -->
           Pri návšteve Poľnej Sauny je potrebné dodržiavať aj niekoľko pravidiel
           pre našu a hlavne pre Vašu spokojnosť.</p>
-          <a class="btn" href="sauna">Pravidlá Sauny</a>
+          <a class="btn" href="terms">Pravidlá Sauny</a>
       </section>
       <section>
         <div id="gallery">
