--- a/confirm.html
+++ b/confirm.html
@@ -30,7 +30,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna">Sauna</a></li>
+              <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
               <li>
@@ -51,7 +51,7 @@
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
           <ul>
-            <li><a href="sauna">Sauna</a></li>
+            <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
