--- a/reservation.html
+++ b/reservation.html
@@ -35,7 +35,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna">Sauna</a></li>
+              <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
               <li>
@@ -58,7 +58,7 @@
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
           <ul>
-            <li><a href="sauna">Sauna</a></li>
+            <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
