--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna">Sauna</a></li>
+              <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
               <li>
@@ -50,7 +50,7 @@
           /></a>
 
           <ul>
-            <li><a href="sauna">Sauna</a></li>
+            <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
