--- a/thanks.html
+++ b/thanks.html
@@ -29,7 +29,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="sauna">Sauna</a></li>
+              <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
               <li>
@@ -52,7 +52,7 @@
             ><img src="sauna.png" id="img-logo" alt="logo"
           /></a>
           <ul>
-            <li><a href="sauna">Sauna</a></li>
+            <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
             <li><a href="contact">Kontakt</a></li>
             <li>
