--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
           <div>
               <div>
                   <ul>
+                      <li><a href="index.html"><i class="fa-regular fa-house"></i></a></li>
                       <li><a href="terms">Pravidlá</a></li>
                       <li><a href="reservation">Rezervácia</a></li>
                       <li><a href="contact">Kontakt</a></li>
                       <li>
-                        <a
-                          href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
-                          ><i class="fa-brands fa-instagram"></i
-                        ></a>
+                        <a href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram"></i></a>
                       </li>
 
                   </ul>
