--- a/reservation.html
+++ b/reservation.html
@@ -35,7 +35,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="index.html"><i class="fa-regular fa-house"></i></a></li>
+              <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
               <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
