--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,7 @@
         <div>
           <div>
             <ul>
-              <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
+              <li><a href="/"><i class="fa-solid fa-house"></i></a></li>
               <li><a href="terms">Pravidlá</a></li>
               <li><a href="reservation">Rezervácia</a></li>
               <li><a href="contact">Kontakt</a></li>
