--- a/cancel.html
+++ b/cancel.html
@@ -78,5 +78,6 @@
       <p class="copy">Copyright © 2022 - Poľná sauna Nová Ľubovňa</p>
     </footer>
     <script src="cancel.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
