--- a/confirm.html
+++ b/confirm.html
@@ -71,12 +71,14 @@
       </div>
     </header>
     <div class="heading-success">
-      <h1 id="message" class="text-secondary"></h1>
+      <!-- <h1 id="message" class="text-secondary"></h1> -->
+      <h1 id="message" class="text-secondary">Rezervácia úspešná</h1>
     </div>
 
     <footer id="footer">
       <p class="copy">Copyright © 2022 - Poľná sauna Nová Ľubovňa</p>
     </footer>
     <script src="confirm.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
