--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <nav id="main-nav">
           <!-- <a href="/" id="logo"
             >POĽNÁ<span class="text-color">SAUNA</span></a
-          > -->
-          <a href="/" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
+            > -->
+            <a href="/" id="logo"><img src="sauna.png" id="img-logo" alt="logo"></a>
           <ul>
             <li><a href="terms">Pravidlá</a></li>
             <li><a href="reservation">Rezervácia</a></li>
@@ -70,6 +70,9 @@
               Spoj relaxačnú silu sauny a prírody a rezervuj si svoj termín
             </p>
             <a class="btn" href="reservation">Rezervácia</a>
+            <!-- <div id="moving-text">
+              <marquee direction="left">Oznam : Sťažený prístup autom kvôli sneženiu</marquee>
+            </div> -->
           </div>
         </div>
       </div>
