--- a/success.html
+++ b/success.html
@@ -85,5 +85,6 @@
     <footer id="footer">
       <p class="copy">Copyright © 2022 - Poľná sauna Nová Ľubovňa</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
