--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         </nav>
         <div id="showcase">
           <div class="showcase-content">
-            <h1><span class="text-secondary"> POĽNÁ SAUNA</span></h1>
-            <p class="lead">
+            <h1><span class="text-secondary">POĽNÁ SAUNA</span></h1>
+            <p class="text-lead">
               Spoj relaxačnú silu sauny a prírody a rezervuj si svoj termín
             </p>
             <a class="btn" href="reservation">Rezervácia</a>
-            <!-- <div id="moving-text">
-              <marquee direction="left">Oznam : Sťažený prístup autom kvôli sneženiu</marquee>
-            </div> -->
+            <div class="oznam">
+              <h3>Oznam :</h3>
+              <p class="p-oznam">V zimných mesiacoch nemusí byť prístupová cesta prejazdná osobným autom. Za pochopenie ďakujeme.</p>
+            </div>
           </div>
         </div>
       </div>
