--- a/reservation.html
+++ b/reservation.html
@@ -1,127 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>POĽNÁ SAUNA</title>
-    <link rel="icon" href="/img/icons8-log-cabin-16.png" />
-    <link href="calendar.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="menu.css" />
-    <link rel="stylesheet" href="form.css" />
-    <link rel="stylesheet" href="calendar.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/13dba11563.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <!-- mobile menu -->
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler" />
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
-          <div>
-            <ul>
-              <li>
-                <a href="/"><i class="fa-solid fa-house"></i></a>
-              </li>
-              <li><a href="terms">Pravidlá</a></li>
-              <li><a href="reservation">Rezervácia</a></li>
-              <li><a href="contact">Kontakt</a></li>
-              <li>
-                <a
-                  href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
-                  target="_blank"
-                  ><i class="fa-brands fa-instagram"></i
-                ></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Header -->
-    <header id="header-home-reservation">
-      <div class="container">
-        <nav id="main-nav">
-          <a href="/" id="logo"
-            ><img src="sauna.png" id="img-logo" alt="logo"
-          /></a>
-          <ul>
-            <li><a href="terms">Pravidlá</a></li>
-            <li><a href="reservation">Rezervácia</a></li>
-            <li><a href="contact">Kontakt</a></li>
-            <li>
-              <a href="https://instagram.com/polna_sauna_?igshid=YmMyMTA2M2Y="
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-            </li>
-          </ul>
-        </nav>
-        <div id="showcase">
-          <div class="showcase-content">
-            <h1><span class="text-secondary">REZERVÁCIA</span></h1>
-          </div>
-        </div>
-      </div>
-    </header>
-    <h1 id="re-heading">Vyberte si svoj termín</h1>
-    <!-- <h3 id="re-subheading">klinutím na dátum a zvolený čas</h3> -->
-    <div class="reservation-wrap">
-      <div id="calendar"></div>
-
-      <form id="reservation">
-        <div style="margin-bottom: 10px">
-          <label for="term">Termín:</label> <span id="term"></span><br />
-        </div>
-        <label for="name">Meno a Priezvisko:</label>
-        <input
-          type="text"
-          id="name"
-          name="name"
-          pattern="\S{3,}.*"
-          required
-        /><br />
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required /><br />
-        <label for="phone">Tel. číslo:</label>
-        <input type="tel" id="phone" name="phone" required /><br /><br />
-        <input type="checkbox" id="suhlas" required />
-        <label for="suhlas"
-          >Súhlasím s
-          <a href="podmienky.pdf" target="_blank" class="inline-link"
-            >podmienkami</a
-          >
-          využívania poľnej sauny</label
-        ><br />
-        <input type="hidden" id="year" name="year" />
-        <input type="hidden" id="month" name="month" />
-        <input type="hidden" id="day" name="day" />
-        <input type="hidden" id="hour" name="hour" />
-        <input type="submit" value="Rezervovať" class="re-button" />
-      </form>
-    </div>
-
-    <a class="to-top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
-    <footer id="footer">
-      <p class="copy">Copyright © 2022 - Poľná Sauna Nová Ľubovňa</p>
-    </footer>
-    <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/locale/sk.min.js"></script>
-    <script src="calendar.js"></script>
-  </body>
-</html>
+Údržba stránky...
