--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
               Spoj relaxačnú silu sauny a prírody a rezervuj si svoj termín
             </p>
             <a class="btn" href="reservation">Rezervácia</a>
-            <!-- <div class="oznam">
+            <div class="oznam">
               <h3>Oznam :</h3>
               <p class="p-oznam">V zimných mesiacoch nemusí byť prístupová cesta prejazdná osobným autom. Za pochopenie ďakujeme.</p>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
