--- a/index.html
+++ b/index.html
@@ -111,7 +111,28 @@
             <div class="image">
               <img
                 class="img"
+                src="img/IMG20230529152630.jpg"
+                alt="sauna picture"
+              />
+            </div>
+            <div class="image">
+              <img
+                class="img"
+                src="img/IMG20230529153846.jpg"
+                alt="sauna picture"
+              />
+            </div>
+            <div class="image">
+              <img
+                class="img"
                 src="img/IMG-20220420-WA0003.jpg"
+                alt="sauna picture"
+              />
+            </div>
+            <div class="image">
+              <img
+                class="img"
+                src="img/IMG20230529153059.jpg"
                 alt="sauna picture"
               />
             </div>
@@ -126,6 +147,13 @@
               <img
                 class="img"
                 src="img/IMG-20220420-WA0005.jpg"
+                alt="sauna picture"
+              />
+            </div>
+            <div class="image">
+              <img
+                class="img"
+                src="img/IMG20230529153910.jpg"
                 alt="sauna picture"
               />
             </div>
