--- a/success.html
+++ b/success.html
@@ -62,28 +62,14 @@
             </li>
           </ul>
         </nav>
-        <!-- <div id="showcase">
-          <div class="showcase-content">
-            <h1>
-              <span class="text-secondary smaller"
-              >Rezerváciu prosím potvrďte v emaily</span
-              >
-            </h1>
-          </div>
-        </div> -->
       </div>
     </header>
     <div class="heading-success">
-      <!-- <h1>
-        <span class="text-secondary smaller"
-          >Rezerváciu prosím potvrďte v emaily</span
-        >
-      </h1> -->
-      <h1 class="text-secondary">Rezerváciu prosím potvrďte v emaily</h1>
+      <h1 class="text-secondary">Rezerváciu prosím potvrďte kliknutím na odkaz z emailu</h1>
     </div>
 
     <footer id="footer">
-      <p class="copy">Copyright © 2022 - Poľná sauna Nová Ľubovňa</p>
+      <p class="copy">Copyright © 2023 - Poľná sauna Nová Ľubovňa</p>
     </footer>
     <script src="script.js"></script>
   </body>
