--- a/terms.html
+++ b/terms.html
@@ -84,7 +84,7 @@
         saunovej peci<br /><br />
         <b>◈</b> Nezabudni však na ochladzovanie, ktoré ti ponúka súd alebo
         vedro s vodou<br /><br />
-        <b>◈</b>Je potrebné dodržiavať pitný režim, len z vlastných zdrojov<br /><br />
+        <b>◈</b>Je potrebné dodržiavať pitný režim z vlastných zdrojov<br /><br />
         <b>◈</b> Zrelaxovať sa môžete na pripravených miestach <br /><br /><b
           >◈</b
         >Prosíme, aby ste v celom areáli sauny nefajčili a nepožívali
