--- a/calendar.html
+++ b/calendar.html
@@ -24,5 +24,5 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/locale/sk.min.js"></script>
-  <!--<script src="calendar.js"></script>-->
+  <script src="calendar.js"></script>
 </html>
