--- a/success.html
+++ b/success.html
@@ -65,7 +65,7 @@
       </div>
     </header>
     <div class="heading-success">
-      <h1 class="text-secondary">Rezerváciu je potrebné potvrdiť do 15 minút kliknutím na odkaz, ktorý obdržíte v e-maile.</h1>
+      <h1 class="text-secondary">Rezerváciu prosím potvrďte kliknutím na odkaz v emaile</h1>
     </div>
 
     <footer id="footer">
