--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,7 @@
             name="_next"
             value="https://polnasauna.sk/thanks"
           />
+          <input type="hidden" name="_url" value="https://polnasauna.sk/contact">
           <div class="wrapper">
             <div class="box">
               <input type="text" name="fname" id="fname" required />
