--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
       <div class="container-contact">
         <h2>Kontaktujte nás</h2>
         <form
-          action="https://formsubmit.co/barlik@zoho.com"
+          action="https://formsubmit.co/info@polnasauna.sk"
           method="POST"
           id="form-section"
         >
