--- a/contact.html
+++ b/contact.html
@@ -81,24 +81,36 @@
     <main id="contact-main">
       <div class="container-contact">
         <h2>Kontaktujte nás</h2>
-        <form action="https://formsubmit.co/info@polnasauna.sk" method="POST" id="form-section">
-          <input type="hidden" name="_next" value="https://polnasauna.sk/thanks"/>
+        <form
+          action="https://formsubmit.co/info@polnasauna.sk"
+          method="POST"
+          id="form-section"
+        >
+          <input
+            type="hidden"
+            name="_next"
+            value="https://polnasauna.sk/thanks"
+          />
           <input type="hidden" name="_url" value="https://polnasauna.sk/contact">
           <div class="wrapper">
             <div class="box">
-              <input type="text" name="name" id="name" required />
-              <label for="lname">Meno a Priezvisko</label>
+              <input type="text" name="fname" id="fname" required />
+              <label for="fname">Meno</label>
+            </div>
+            <div class="box">
+              <input type="text" name="lname" id="lname" required />
+              <label for="lname">Priezvisko</label>
             </div>
           </div>
 
           <div class="wrapper">
             <div class="box">
               <input type="email" name="email" id="email" required />
-              <label for="email">E-mail</label>
+              <label for="email">Email</label>
             </div>
             <div class="box">
               <input type="text" name="tel" id="tel" required />
-              <label for="tel">Tel. číslo</label>
+              <label for="tel">Mobil</label>
             </div>
           </div>
 
@@ -109,7 +121,7 @@
             </div>
           </div>
 
-          <button type="submit">Odoslať</button>
+          <input type="submit" name="" value="Odoslať" />
         </form>
       </div>
     </main>
