--- a/contact.html
+++ b/contact.html
@@ -81,16 +81,8 @@
     <main id="contact-main">
       <div class="container-contact">
         <h2>Kontaktujte nás</h2>
-        <form
-          action="https://formsubmit.co/info@polnasauna.sk"
-          method="POST"
-          id="form-section"
-        >
-          <input
-            type="hidden"
-            name="_next"
-            value="https://polnasauna.sk/thanks"
-          />
+        <form action="https://formsubmit.co/info1@polnasauna.sk" method="POST" id="form-section" >
+          <input type="hidden" name="_next" value="https://polnasauna.sk/thanks" />
           <input type="hidden" name="_url" value="https://polnasauna.sk/contact">
           <div class="wrapper">
             <div class="box">
@@ -106,11 +98,11 @@
           <div class="wrapper">
             <div class="box">
               <input type="email" name="email" id="email" required />
-              <label for="email">Email</label>
+              <label for="email">E-mail</label>
             </div>
             <div class="box">
               <input type="text" name="tel" id="tel" required />
-              <label for="tel">Mobil</label>
+              <label for="tel">Tel. číslo</label>
             </div>
           </div>
 
