--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     <main id="contact-main">
       <div class="container-contact">
         <h2>Kontaktujte nás</h2>
-        <form action="https://formsubmit.co/info1@polnasauna.sk" method="POST" id="form-section" >
+        <form action="https://formsubmit.co/info@polnasauna.sk" method="POST" id="form-section" >
           <input type="hidden" name="_next" value="https://polnasauna.sk/thanks" />
           <input type="hidden" name="_url" value="https://polnasauna.sk/contact">
           <div class="wrapper">
