--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,12 @@
           <input type="hidden" name="_url" value="https://polnasauna.sk/contact">
           <div class="wrapper">
             <div class="box">
-              <input type="text" name="fname" id="fname" required />
-              <label for="fname">Meno</label>
+              <input type="text" name="meno" id="fname" required />
+              <label for="meno">Meno</label>
             </div>
             <div class="box">
-              <input type="text" name="lname" id="lname" required />
-              <label for="lname">Priezvisko</label>
+              <input type="text" name="priezvisko" id="lname" required />
+              <label for="priezvisko">Priezvisko</label>
             </div>
           </div>
 
