--- a/contact.html
+++ b/contact.html
@@ -108,8 +108,8 @@
 
           <div class="wrapper">
             <div class="box">
-              <textarea name="message" id="message" required></textarea>
-              <label for="message">Napíšte správu tu...</label>
+              <textarea name="sprava" id="message" required></textarea>
+              <label for="sprava">Napíšte správu tu...</label>
             </div>
           </div>
 
