--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -99,7 +99,7 @@
         <label for="phone">Tel. číslo:</label>
         <input type="tel" id="phone" name="phone" required /><br /><br />
         <input type="checkbox" id="suhlas" required />
-        <label for="suhlas">Súhlasím s <a href="podmienky.pdf" target="_blank" class="inline-link">podmienkami</a> využívania poľnej sauny</label><br />
+        <label for="suhlas">Súhlasím s <a href="v2-podmienky.pdf" target="_blank" class="inline-link">podmienkami</a> využívania poľnej sauny</label><br />
         <input type="hidden" id="year" name="year" />
         <input type="hidden" id="month" name="month" />
         <input type="hidden" id="day" name="day" />
